--- a/src/NNTraining.Host/Properties/launchSettings.json
+++ b/src/NNTraining.Host/Properties/launchSettings.json
@@ -12,9 +12,8 @@
     "NNTraining.Host": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7024;http://localhost:5024",
+      "applicationUrl": "https://localhost:7024",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
