feat: Added new functional, it trained the model of data prediction and predict the some values

--- a/src/NNTraining.Host/NNTraining.Host.csproj
+++ b/src/NNTraining.Host/NNTraining.Host.csproj
@@ -22,4 +22,10 @@
       <ProjectReference Include="..\NNTraining.DataAccess\NNTraining.DataAccess.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="train-set.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
