--- a/src/NNTraining.App/NNTraining.App.csproj
+++ b/src/NNTraining.App/NNTraining.App.csproj
@@ -16,4 +16,10 @@
       <PackageReference Include="Microsoft.ML" Version="1.7.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.4\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
