--- a/src/NNTraining.Contracts/NNTraining.Contracts.csproj
+++ b/src/NNTraining.Contracts/NNTraining.Contracts.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\NNTraining.Domain\NNTraining.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.4\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
