--- a/src/NNTraining.App/NNTraining.App.csproj
+++ b/src/NNTraining.App/NNTraining.App.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.ML" Version="1.7.1" />
+      <PackageReference Include="Minio" Version="4.0.5" />
     </ItemGroup>
 
     <ItemGroup>
