--- a/src/NNTraining.Contracts/NNTraining.Contracts.csproj
+++ b/src/NNTraining.Contracts/NNTraining.Contracts.csproj
@@ -16,4 +16,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Minio" Version="4.0.5" />
+    </ItemGroup>
+
 </Project>
