--- a/src/NNTraining.App/NNTraining.App.csproj
+++ b/src/NNTraining.App/NNTraining.App.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>NNTraining.Host</RootNamespace>
+        <RootNamespace>NNTraining.App</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
