--- a/src/NNTraining.Host/NNTraining.Host.csproj
+++ b/src/NNTraining.Host/NNTraining.Host.csproj
@@ -27,4 +27,10 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
