--- a/src/NNTraining.App/NNTraining.App.csproj
+++ b/src/NNTraining.App/NNTraining.App.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
       <PackageReference Include="Microsoft.ML" Version="1.7.1" />
       <PackageReference Include="Minio" Version="4.0.5" />
     </ItemGroup>
