--- a/src/NNTraining.Host/NNTraining.Host.csproj
+++ b/src/NNTraining.Host/NNTraining.Host.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\NNTraining.App\NNTraining.App.csproj" />
+      <ProjectReference Include="..\NNTraining.Common\NNTraining.Common.csproj" />
       <ProjectReference Include="..\NNTraining.Contracts\NNTraining.Contracts.csproj" />
       <ProjectReference Include="..\NNTraining.DataAccess\NNTraining.DataAccess.csproj" />
     </ItemGroup>
