--- a/src/NNTraining.Host/appsettings.json
+++ b/src/NNTraining.Host/appsettings.json
@@ -15,6 +15,16 @@
     "SecretKey": "minioadmin",
     "Secure": "false"
   },
+  "RabbitMq": {
+    "HostName": "127.0.0.1",
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueChangeModelStatus": "QueueChangeModelStatus",
+    "QueueCommon": "QueueCommon",
+    "TrainingQueueToTrain": "TrainingQueueToTrain",
+    "TrainingQueueFromTrainer": "TrainingQueueFromTrainer"
+    
+  },
   "Cors": {
     "Hosts": ["http://localhost:8080", "https://localhost:8080"]
   }
