--- a/src/NNTraining.Contracts/NNTraining.Contracts.csproj
+++ b/src/NNTraining.Contracts/NNTraining.Contracts.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\NNTraining.Common\NNTraining.Common.csproj" />
       <ProjectReference Include="..\NNTraining.Domain\NNTraining.Domain.csproj" />
     </ItemGroup>
 
