feat: in progress

--- a/src/NNTraining.Host/appsettings.json
+++ b/src/NNTraining.Host/appsettings.json
@@ -21,9 +21,9 @@
     "Password": "guest",
     "QueueChangeModelStatus": "QueueChangeModelStatus",
     "QueueCommon": "QueueCommon",
-    "TrainingQueueToTrain": "TrainingQueueToTrain",
-    "TrainingQueueFromTrainer": "TrainingQueueFromTrainer"
-    
+    "PredictionResult": "PredictionResult",
+    "QueueToPredict": "QueueToPredict",
+    "QueueToTrain": "QueueToTrain"
   },
   "Cors": {
     "Hosts": ["http://localhost:8080", "https://localhost:8080"]
