feat: deleted unused dependencies

--- a/src/NNTraining.TrainerWorker.Host/appsettings.json
+++ b/src/NNTraining.TrainerWorker.Host/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Minio": {
+    "AccessKey": "admin",
+    "Endpoint":"127.0.0.1:9000",
+    "SecretKey": "minioadmin",
+    "Secure": "false"
+  },
+  "RabbitMq": {
+    "HostName": "127.0.0.1",
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueChangeModelStatus": "QueueChangeModelStatus",
+    "QueueCommon": "QueueCommon",
+    "PredictionResult": "PredictionResult",
+    "QueueToPredict": "QueueToPredict",
+    "QueueToTrain": "QueueToTrain"
+  }
 }
