--- a/src/NNTraining.TrainerWorker.Host/appsettings.json
+++ b/src/NNTraining.TrainerWorker.Host/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+//  "Cors": {
+//    "Hosts": ["http://localhost:8082", "https://localhost:8082"]
+//  },
   "AllowedHosts": "*",
   "Minio": {
     "AccessKey": "admin",
