feat: fixed errors in different places for work it

--- a/src/NNTraining.WebApi.Host/appsettings.json
+++ b/src/NNTraining.WebApi.Host/appsettings.json
@@ -22,6 +22,7 @@
     "QueueChangeModelStatus": "QueueChangeModelStatus",
     "QueueCommon": "QueueCommon",
     "PredictionResult": "PredictionResult",
+    "SaveFileWithModel": "SaveFileWithModel",
     "QueueToPredict": "QueueToPredict",
     "QueueToTrain": "QueueToTrain"
   },
