--- a/src/NNTraining.TrainerWorker.Host/Properties/launchSettings.json
+++ b/src/NNTraining.TrainerWorker.Host/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7020;http://localhost:5117",
+      "applicationUrl": "https://localhost:7020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
