--- a/src/NNTraining.TrainerWorker.Host/appsettings.json
+++ b/src/NNTraining.TrainerWorker.Host/appsettings.json
@@ -21,5 +21,8 @@
     "PredictionResult": "PredictionResult",
     "QueueToPredict": "QueueToPredict",
     "QueueToTrain": "QueueToTrain"
+  },
+  "Cors": {
+    "Hosts": ["http://localhost:8080", "https://localhost:8080"]
   }
 }
